feat: create dropdown directive (#146)
* feat(dropdown): directive and component added

* test: dropdown component tests added

* test: directive tests added

* refactor: type docs added and tests refactor

* fix: no data padding and item icon color

* chore: install angular cdk

* fix: event emission on hover

* docs: dropdown stories added

* fix: cdk overlay css import build error

* refactor: remove unecessary import and methods improved

* fix: lint

---------

Co-authored-by: Iury Nogueira <nogueiraiury20@gmail.com>

--- a/projects/ion/src/styles/index.scss
+++ b/projects/ion/src/styles/index.scss
@@ -4,3 +4,4 @@
 @import 'shadows/index.scss';
 @import 'z-indexes/index.scss';
 @import 'presets-styles/index.scss';
+@import 'scrollbar/index.scss';
