chore: removing dropdown component from directive folder

--- a/projects/ion/src/lib/dropdown/dropdown.component.scss
+++ b/projects/ion/src/lib/dropdown/dropdown.component.scss
@@ -1,4 +1,4 @@
-@import '../../../styles/index.scss';
+@import '../../styles/index.scss';
 
 @mixin set-colors($bgColor, $text-color) {
   background-color: $bgColor;
