--- a/projects/ion-test/src/app/app.component.html
+++ b/projects/ion-test/src/app/app.component.html
@@ -1,2 +1,10 @@
 <h1>Ion test!</h1>
 <ion-icon type="pencil"></ion-icon>
+<ion-select
+  [propLabel]="'A'"
+  [placeholder]="'placeholder'"
+  [options]="[
+    { label: 'Option 1', value: 1, selected: false, key: '1' },
+    { label: 'Option 2', value: 2, selected: false, key: '2' },
+    { label: 'Option 3', value: 3, selected: false, key: '3' },
+  ]"></ion-select>
