--- a/projects/ion/src/lib/select/select.component.scss
+++ b/projects/ion/src/lib/select/select.component.scss
@@ -45,6 +45,7 @@
     flex-direction: row;
   }
 
+
   input {
     padding: 0;
     width: 100%;
@@ -56,5 +57,48 @@
     font-size: 14px;
     font-weight: 400;
     line-height: 20px;
+  }
+
+  &--required {
+    border-color: $negative-5;
+
+    &:hover {
+      border-color: $negative-6;
+    }
+
+    &:focus-within,
+    &:active {
+      border-color: $negative-6;
+      box-shadow: 0 0 0 2px $negative-2;
+    }
+
+    ::ng-deep svg {
+      fill: $negative-5;
+    }
+  }
+
+  &--disabled {
+    background-color: $neutral-2;
+    border-color: $neutral-4;
+    cursor: not-allowed;
+
+    &:hover,
+    &:focus-within,
+    &:active {
+      border-color: $neutral-4;
+      box-shadow: none;
+    }
+
+    input {
+      cursor: not-allowed;
+
+      &::placeholder {
+        color: $neutral-4;
+      }
+    }
+
+    ::ng-deep svg {
+      fill: $neutral-5;
+    }
   }
 }
