refactor: correcting select behavior

--- a/projects/ion/src/lib/select/select.component.html
+++ b/projects/ion/src/lib/select/select.component.html
@@ -7,7 +7,7 @@
     multiple: mode() === 'multiple',
     clearButton: mode() === 'multiple',
     maxSelected: maxSelect(),
-    shouldRender: disabled(),
+    shouldRender: !disabled(),
   }"
   [dropdownLoading]="loading()"
   [dropdownOptions]="visibleOptions"
@@ -16,9 +16,10 @@
   [class.ion-select--required]="isValid"
   [class.ion-select--disabled]="disabled()">
   <div class="ion-select-container">
-    @for (option of options(); track option.label) {
+    @for (option of options(); track option.label; let i = $index) {
       @if (option.selected) {
         <ion-select-item
+          [attr.data-testid]="'ion-select-item-selected-' + i"
           [label]="option.label"
           [disabled]="disabled()"
           (unselect)="unselectOption(option)"></ion-select-item>
@@ -27,6 +28,7 @@
     <input
       #ionSelectInput
       type="text"
+      data-testid="ion-select-input"
       [placeholder]="!hasSelectedOption() ? placeholder() : ''"
       [required]="required()"
       [disabled]="disabled()"
