--- a/projects/ion/src/lib/select/select.component.html
+++ b/projects/ion/src/lib/select/select.component.html
@@ -17,7 +17,7 @@
     [dropdownLoading]="loading()"
     [dropdownOptions]="visibleOptions"
     (dropdownOpened)="handleClick($event)"
-    (dropdownEvent)="selected($event)">
+    (dropdownEvent)="onSelect($event)">
     @for (option of options(); track option.label; let i = $index) {
       @if (option.selected) {
         <ion-select-item
