feat: create modal service and component

--- a/projects/ion/src/styles/index.scss
+++ b/projects/ion/src/styles/index.scss
@@ -5,3 +5,4 @@
 @import 'z-indexes/index.scss';
 @import 'presets-styles/index.scss';
 @import 'scrollbar/index.scss';
+@import '@angular/cdk/overlay-prebuilt.css';
