--- a/projects/ion/src/lib/chip/chip.component.scss
+++ b/projects/ion/src/lib/chip/chip.component.scss
@@ -1,4 +1,3 @@
-
 @import '../../styles/index.scss';
 
 @mixin chip-style($bgColor, $borderColor, $textColor) {
@@ -11,7 +10,7 @@
   }
 }
 
-@mixin chip-size($heigth, $padding, $fontSize, $lineHeight){
+@mixin chip-size($heigth, $padding, $fontSize, $lineHeight) {
   height: $heigth;
   padding: $padding;
   font-size: $fontSize;
@@ -36,8 +35,6 @@
   transition: all 300ms;
 
   @include chip-style($neutral-1, $primary-3, $primary-5);
-
-
 
   &:hover {
     @include chip-style($primary-1, $primary-3, $primary-5);
@@ -79,11 +76,11 @@
   }
 }
 .chip-sm {
-  @include chip-size(24px, 4px 8px, 12px, 16px)
+  @include chip-size(24px, 4px 8px, 12px, 16px);
 }
 
 .chip-md {
-  @include chip-size(32px, 6px 12px, 14px, 20px)
+  @include chip-size(32px, 6px 12px, 14px, 20px);
 }
 
 .container-icon-text {
