refactor: implement computed signal in chip

--- a/projects/ion/src/lib/chip/chip.component.html
+++ b/projects/ion/src/lib/chip/chip.component.html
@@ -21,7 +21,7 @@
     <ion-icon
       [attr.data-testid]="'chip-icon-' + iconPosition()"
       [attr.class]="'icon-color chip-icon-' + iconPosition()"
-      [type]="dropdownWithIcon ? iconPlaceholder : icon()"
+      [type]="dropdownWithIcon() ? iconPlaceholder() : icon()"
       [size]="iconSize"></ion-icon>
   }
 
