refactor: correcting disabled state

--- a/projects/ion/src/lib/input-select/input-select.component.html
+++ b/projects/ion/src/lib/input-select/input-select.component.html
@@ -50,7 +50,7 @@
       <div class="separator">-</div>
 
       <div class="input-container">
-        <div class="input second-input">
+        <div class="input second-input" [class.disabled]="disabled()">
           <input
             data-testid="second-input"
             type="text"
