--- a/projects/ion/src/lib/tooltip/component/tooltip.component.html
+++ b/projects/ion/src/lib/tooltip/component/tooltip.component.html
@@ -3,7 +3,7 @@
   class="ion-tooltip"
   [ngClass]="[
     'ion-tooltip-' + ionTooltipColorScheme,
-    'ion-tooltip-position--' + ionTooltipPosition
+    'ion-tooltip-position--' + ionTooltipPosition,
   ]"
   [class.ion-tooltip--visible]="ionTooltipVisible"
   [style.top]="top + 'px'"
